--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ header .text{
 
 #container{
     text-align: center;
-    padding-top: 80px;
+    padding-top: 150px;
 }
 
 header .cn{
@@ -366,7 +366,7 @@ h3{
     background-color: #E71F22;
     color: #fff;
     text-transform: uppercase;
-    justify-content: space-between;
+    justify-content: center;
      width: 100vw;
 }
 
